fixed compile errors after cherry-picking from master