@@ -36,12 +36,12 @@ import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.xcontent.ToXContentObject;
 import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -152,11 +152,11 @@ public class GetDataStreamsAction extends ActionType<GetDataStreamsAction.Respon
         }
 
         @Override
-        protected void masterOperation(Task task, Request request, ClusterState state,
+        protected void masterOperation(Request request, ClusterState state,
                                        ActionListener<Response> listener) throws Exception {
-            List<DataStream> dataStreams = List.of(
-                new DataStream("my_data_stream1", "@timestamp", List.of("my_data_stream1-000000")),
-                new DataStream("my_data_stream2", "@timestamp", List.of())
+            List<DataStream> dataStreams = Arrays.asList(
+                new DataStream("my_data_stream1", "@timestamp", Collections.singletonList("my_data_stream1-000000")),
+                new DataStream("my_data_stream2", "@timestamp", Collections.emptyList())
             );
             listener.onResponse(new Response(dataStreams));
         }
